Fixed nav spacing at customer page

--- a/web/css/components/_collapsible-nav.less
+++ b/web/css/components/_collapsible-nav.less
@@ -19,6 +19,7 @@
             .sidebar & {
                 background: @base__background;
                 position: absolute;
+                margin: 0 !important;
                 top: 0;
                 width: 100%;
             }
